# extract_inspector

./: .gitignore  README.md  pyproject.toml
examples/: inspect_json_fixture.py
extract_inspector/: __init__.py
extract_inspector/inspect/: __init__.py  app.py  matching.py  models.py  normalize.py  ui.py
tests/: test_json_fixtures.py  test_matching.py  test_normalize.py
tests/fixtures/: actions.json  clinical_texts.json  diagnoses.json  entities.json  lab_values.json  patient_demo.json  texts.json
