[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "extract_inspector"
version = "0.1.0"
description = "General-purpose inspector for source texts and extracted structured data."
requires-python = ">=3.10"
dependencies = [
    "flask>=2.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["extract_inspector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
